# locomanipulation

./: .gitignore  CMakeLists.txt  README.md  README.md~  err.m  l_ankle.m  locoman_module.hpp  locomanipulation.kdev4  r_ankle.m  tic_toc.txt
.kdev4/: locomanipulation.kdev4
app/: CMakeLists.txt
app/conf/: locoman_configuration.ini  locoman_configuration_coman.ini
feet_hands/: CMakeLists.txt
feet_hands/app/: CMakeLists.txt
feet_hands/app/conf/: locoman_configuration.ini  locoman_configuration.ini~
feet_hands/include/: locoman_constants.h  locoman_module.hpp  utils.hpp
feet_hands/src/: OLD_locoman_control_OLD.cpp  locoman_control_thread.cpp
feet_r_hand/: CMakeLists.txt
feet_r_hand/app/: CMakeLists.txt
feet_r_hand/src/: locoman_control_thread.cpp
include/: locoman_constants.h  locoman_control_thread.h  locoman_module.hpp
only_feet/: CMakeLists.txt  README.md
only_feet/app/: CMakeLists.txt
only_feet/app/conf/: locoman_configuration.ini  locoman_configuration_bigman.ini
only_feet/include/: locoman_constants.h  locoman_control_thread.h  locoman_module.hpp
only_feet/src/: LAST_WORKING_locoman_control_thread.cpp  OLD_derivative_and_file_OLD.cpp  locoman_control_thread.cpp  locoman_main.cpp  simple_main.cpp
src/: .locoman_control_thread.cpp.kate-swp  locoman_control_thread.cpp  locoman_control_thread.cpp.orig  locoman_main.cpp
